# dawn2

./: .envrc  README.md  flake.nix  justfile
contracts/: .gitignore  foundry.toml  remappings.txt
contracts/src/: Auctions.sol  Collection.sol  OvercollateralizedAuctions.sol  SimpleAuctions.sol  _WETH.sol
contracts/test/: OvercollateralizedAuctions.t.sol  SimpleAuctions.t.sol
crypto/: Cargo.toml
crypto/src/: encapsulate.rs  hash_to_g1.rs  lib.rs
go-ethereum/: .gitrepo
libs/: lib.sh
libs/alloy/: .gitrepo  Cargo.toml
libs/alloy/crates/consensus/: Cargo.toml
libs/alloy/crates/consensus/src/: dawn.rs  lib.rs
libs/alloy/crates/consensus/src/receipt/: envelope.rs
libs/alloy/crates/consensus/src/transaction/: dawn_decrypted.rs  dawn_encrypted.rs  eip1559.rs  eip2930.rs  eip4844.rs  envelope.rs  legacy.rs  mod.rs  typed.rs
libs/alloy/crates/network/src/ethereum/: builder.rs  wallet.rs
libs/alloy/crates/rpc-types-eth/src/transaction/: mod.rs  request.rs
libs/bls12_381/: .gitrepo  Cargo.toml
libs/bls12_381/src/: scalar.rs
libs/cbor-sgx/: .gitrepo  Cargo.toml
libs/cbor-sgx/sgx/cbor-sgx-test/app/: Cargo.toml
libs/cbor-sgx/sgx/cbor-sgx-test/enclave/: Cargo.toml
libs/dawn_crypto/: Cargo.toml
libs/dawn_crypto/src/: encapsulate.rs  hash_to_g1.rs  lib.rs  symmetric.rs
libs/dawn_enclave_protocol/: Cargo.toml
libs/dawn_enclave_protocol/src/: lib.rs
libs/json-sgx/: .gitrepo  Cargo.toml
libs/serde-sgx/: .gitrepo  README.md
libs/serde-sgx/serde/: Cargo.toml
libs/serde-sgx/serde/src/: lib.rs
libs/serde-sgx/serde/src/de/: ignored_any.rs  impls.rs  mod.rs  value.rs
libs/serde-sgx/serde/src/private/: de.rs  ser.rs
libs/serde-sgx/serde/src/ser/: impls.rs
libs/serde-sgx/serde_derive/: Cargo.toml
libs/serde-sgx/sgx/serde-sgx-test/enclave/: Cargo.toml
libs/serde_with-sgx/: .gitrepo
libs/serde_with-sgx/serde_with/: Cargo.toml
nix/shells/default/: default.nix
reth/: .gitrepo  Cargo.toml
reth/crates/primitives/: Cargo.toml
reth/crates/primitives/src/: alloy_compat.rs  lib.rs  receipt.rs
reth/crates/primitives/src/transaction/: compat.rs  dawn_decrypted.rs  dawn_encrypted.rs  mod.rs  pooled.rs  tx_type.rs
reth/crates/storage/codecs/: Cargo.toml
reth/crates/storage/codecs/derive/src/compact/: generator.rs
reth/crates/storage/codecs/src/: lib.rs
reth/crates/storage/libmdbx-rs/mdbx-sys/: build.rs
reth/crates/transaction-pool/src/: traits.rs
reth/crates/transaction-pool/src/validate/: eth.rs
scenario/: Cargo.toml
scenario/src/: main.rs
sgx/: .gitignore  Makefile
sgx/app/: .gitignore  Cargo.toml  Enclave_u.c  Enclave_u.h  app.c
sgx/app/src/: main.rs
sgx/enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile
sgx/enclave/src/: lib.rs
sgx/test/: Cargo.toml
sgx/test/src/: main.rs
