[package]
name = "dawn_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
bls12_381 = { version = "0.8.0", features = ["experimental"] }
chacha20poly1305 = "0.10.1"
ff = "0.13.0"
group = "0.13.0"
rand = "0.8.5"
sha2 = "0.9.1" # Must be compatible with bls12_381, see https://github.com/zkcrypto/bls12_381/issues/102
