[package]
name = "dawn_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10.1"
group = "0.13.0"
ic_bls12_381 = { path = "../bls12_381", features = ["experimental"] }
sha2 = { version = "0.10.8", default-features = false }
serde = { path = "../serde-sgx/serde", features = ["derive"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
