[package]
name = "dawn_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10.1"
group = "0.13.0"
ic_bls12_381 = { version = "0.10.0", features = ["experimental"], optional = true }
ic_bls12_381-sgx = { path = "../bls12_381", package = "ic_bls12_381", features = ["experimental"], optional = true }
sha2 = { version = "0.10.8", default-features = false }
serde = { path = "../serde-sgx/serde", features = ["derive"], default-features = false }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6", optional = true }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6", optional = true }
rand = { version = "0.8.5", optional = true }

[features]
default = [ "no_mesalock_sgx" ]
no_mesalock_sgx = ["dep:ic_bls12_381", "dep:rand"]
mesalock_sgx = ["dep:sgx_tstd", "dep:sgx_rand", "dep:ic_bls12_381-sgx", "serde/mesalock_sgx"]
