[package]
name = "dawn_enclave_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
dawn_crypto = { path = "../dawn_crypto" }
serde = { path = "../serde-sgx/serde", features = ["derive"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.6" }
