[package]
name = "test_sgx_enclave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dawn_enclave_protocol = {path = "../../libs/dawn_enclave_protocol"}
dawn_crypto = {path = "../../libs/dawn_crypto"}
serde = { path = "../../libs/serde-sgx/serde", default-features = false, features = ["std"] }
serde_cbor = { path = "../../libs/cbor-sgx", default-features = false, features = ["std"] }
